syntax = "proto3";

package base;


message RespStatus {
  bool success = 1;
  string message = 2;
}


message Query {
  string shortLink = 1;

  string titleKeyword = 2;
  string contentKeyword = 3;

  string author = 4;

  int64 createdAfter = 5;
  int64 createdBefore = 6;
}

message Document {
  string shortLink = 1;

  string title = 2;
  string content = 3;
  string author = 4;

  int64 created = 5;
}