syntax = "proto3";

package cache;


import "base.proto";


message GetDocumentRequest {
  string shortLink = 1;
}

message GetDocumentResponse {
  base.RespStatus status = 1;
  base.Document document = 2;
}


message SetDocumentRequest {
  base.Document document = 1;
}


message SetDocumentResponse {
  base.RespStatus status = 1;
}


service Cache {
  rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse) {}
  rpc SetDocument(SetDocumentRequest) returns (SetDocumentResponse) {}
}


